--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,19 @@ html,
 body {
   width: '100%';
   height: '100%';
-  padding: 0;
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
   overflow-x: hidden;
+}
+
+@keyframes color_anim {
+  0% {
+      fill: white;
+  }
+  50% {
+      fill: #FBC638;
+  }
+  100% {
+      fill: white;
+  }
 }
